force-app/main/default/objects/Clarity_Form_Answer__c/Clarity_Form_Answer__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Answer</label>
    <nameField>
        <label>Clarity Form Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarity Form Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>