force-app/main/default/objects/Clarity_Form_Answer__c/fields/Clarity_Form_Question__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Form_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clarity Form Question</label>
    <referenceTo>Clarity_Form_Question__c</referenceTo>
    <relationshipLabel>Clarity Form Answers</relationshipLabel>
    <relationshipName>Clarity_Form_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>