force-app/main/default/objects/Clarity_Form_Answer__c/fields/Clarity_Form_Response__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Form_Response__c</fullName>
    <label>Clarity Form Response</label>
    <referenceTo>Clarity_Form_Response__c</referenceTo>
    <relationshipLabel>Clarity Form Answers</relationshipLabel>
    <relationshipName>Clarity_Form_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>